# playos-platform-api

./: AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: build.yml
include/playos/: Storage.h  audio.h  battery.h  bluetooth.h  capabilities.h  device_profile.h  display.h  input.h  lifecycle.h  network.h  playos.h  touch.h
src/: audio.cpp  battery.cpp  bluetooth.cpp  capabilities.cpp  device_profile.cpp  display.cpp  input.cpp  lifecycle.cpp  network.cpp  storage.cpp  touch.cpp
src/backends/: audio_backend.h  battery_backend.h  bluetooth_backend.h  display_backend.h  input_backend.h  network_backend.h  storage_backend.h  touch_backend.h
src/backends/linux/: input_mapping.cpp  input_mapping.h  linux_battery_backend.cpp  linux_bluetooth_backend.cpp  linux_display_backend.cpp  linux_input_backend.cpp  linux_network_backend.cpp  linux_storage_backend.cpp
src/backends/null/: null_audio_backend.cpp  null_battery_backend.cpp  null_bluetooth_backend.cpp  null_display_backend.cpp  null_input_backend.cpp  null_network_backend.cpp  null_storage_backend.cpp  null_touch_backend.cpp
src/backends/platform/: platform_storage_backend.cpp
src/backends/raylib/: raylib_audio_backend.cpp  raylib_display_backend.cpp  raylib_input_backend.cpp  raylib_touch_backend.cpp
src/backends/windows/: windows_battery_backend.cpp  windows_bluetooth_backend.cpp  windows_input_backend.cpp  windows_network_backend.cpp  windows_storage_backend.cpp
